tests/Core/negative/test002.jvc
-- arithmetic operations on non-numbers

def y := 3 + \x x;

y
